2008-10-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvdemux.c: (gst_flv_demux_chain),
	(gst_flv_demux_base_init):
	Use gst_element_class_set_details_simple().

	If we get GST_FLOW_NOT_LINKED in the parse loop but at least
	one of the pads is linked continue the loop.

2008-10-09  Stefan Kost  <ensonic@users.sf.net>

	* ext/amrwb/gstamrwbenc.c:
	* ext/amrwb/gstamrwbenc.h:
	  Pass the discont flag from the input buffer on to the output buffer in
	  the AMR encoder.

2008-10-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvparse.c: (gst_flv_parse_audio_negotiate),
	(gst_flv_parse_tag_audio), (gst_flv_parse_video_negotiate):
	Correct caps for video codec id 5: It's On2 VP6 with alpha channel
	which needs a different decoder and has different caps.

	Add support for audio codec id 14, which is MP3 with 8kHz sampling
	rate.

	Fix endianness and signedness for raw audio codec ids.

	Add support for alaw and mulaw audio.

2008-10-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvdemux.c: (gst_flv_demux_chain):
	Go out of the parse loop as soon as we get an error instead
	of parsing until the GstAdapter is empty.

	Add some explanations about the header and tag size.

	Don't print synchronizing message if everything is fine.

2008-10-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/Makefile.am:
	* gst/flv/gstflvdemux.c: (plugin_init):
	* gst/flv/gstflvmux.c: (gst_flv_mux_base_init),
	(gst_flv_mux_class_init), (gst_flv_mux_init),
	(gst_flv_mux_finalize), (gst_flv_mux_reset),
	(gst_flv_mux_handle_src_event), (gst_flv_mux_handle_sink_event),
	(gst_flv_mux_video_pad_setcaps), (gst_flv_mux_audio_pad_setcaps),
	(gst_flv_mux_request_new_pad), (gst_flv_mux_release_pad),
	(gst_flv_mux_write_header), (gst_flv_mux_write_buffer),
	(gst_flv_mux_collected), (gst_flv_mux_change_state):
	* gst/flv/gstflvmux.h:
	Add first version of a FLV muxer. The only missing feature is writing