@@ -1,5 +1,12 @@
 2008-10-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
 
+	* gst/flv/gstflvdemux.c: (gst_flv_demux_pull_range),
+	(gst_flv_demux_pull_tag), (gst_flv_demux_pull_header):
+	Refactor _pull_range() logic with checks into a seperate function
+	to make things a bit more readable.
+
+2008-10-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
+
 	* gst/flv/gstflvdemux.c: (gst_flv_demux_chain),
 	(gst_flv_demux_base_init):
 	Use gst_element_class_set_details_simple().
